--- a/lazy-ctrl-ui/package.json
+++ b/lazy-ctrl-ui/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -14,6 +14,8 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-grid-layout": "^1.5.2",
+    "react-resizable": "^3.0.5",
     "swr": "^2.3.3",
     "zustand": "^5.0.5"
   },
