--- a/controller-agent/config/config.yaml
+++ b/controller-agent/config/config.yaml
@@ -19,7 +19,7 @@ security:
   allowed_commands: []
 
 commands:
-  config_path: "config/commands.json"
+  config_path: "config/commands-v2.json"
   hot_reload: true
 
 mqtt:
