--- a/lazy-ctrl-ui/package.json
+++ b/lazy-ctrl-ui/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
